--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -14,3 +14,7 @@
 #회원정보 수정
 /member/updateForm.do=member.service.UpdateFormService
 /member/update.do=member.service.UpdateService
+
+#게시글 작성
+/board/writeForm=board.service.WriteFormService
+/board/write=board.service.WriteService
