다시올리기

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -16,5 +16,5 @@
 /member/update.do=member.service.UpdateService
 
 #게시글 작성
-/board/writeForm=board.service.WriteFormService
-/board/write=board.service.WriteService
+/boards/writeForm=board.service.WriteFormService
+/boards/write=board.service.WriteService
