--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -18,3 +18,7 @@
 #게시글 작성
 /boards/writeForm=board.service.WriteFormService
 /boards/write=board.service.WriteService
+
+#게시글 목록
+/boards/listForm=board.service.ListFormService
+/boards/list=board.service.ListService
