게시글 검색

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -22,3 +22,4 @@
 #게시글 목록
 /boards/listForm=board.service.ListFormService
 /boards/list=board.service.ListService
+/boards/search=board.service.SearchService
