--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -22,4 +22,13 @@
 #게시글 목록
 /boards/listForm=board.service.ListFormService
 /boards/list=board.service.ListService
+
+#게시글 검색
 /boards/search=board.service.SearchService
+
+#게시글 상세페이지
+/boards/detailForm=board.service.DetailFormService
+/boards/detail=board.service.DetailService
+
+#게시글 삭제
+/boards/delete=board.service.DeleteService
