수정파트 진행 중

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -32,3 +32,7 @@
 
 #게시글 삭제
 /boards/delete=board.service.DeleteService
+
+#게시물 수정
+/boards/updateForm=board.service.UpdateFormService
+/boards/update=board.service.UpdateService
