페이징 부분 진행중

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -36,3 +36,6 @@
 #게시물 수정
 /boards/updateForm=board.service.UpdateFormService
 /boards/update=board.service.UpdateService
+
+#페이징 번호
+ /boards/pagehtml=board.service.PageService
